# mcp-context-forge

./: .bumpversion.cfg  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .pre-commit-lite.yaml  .pycodestyle  .pylintrc  .secrets.baseline  .yamllint  AGENTS.md  CHANGELOG.md  Cargo.toml  Containerfile  Containerfile.lite  Containerfile.scratch  MANIFEST.in  MCP_CONTEXTFORGE_PLUGIN_OVERVIEW.md  Makefile  README.md  SECURITY.md  docker-compose-debug.yml  docker-compose-embedded.yml  docker-compose-performance.yml  docker-compose-verbose-logging.yml  docker-compose.siem-opensearch.yml  docker-compose.yml  package-lock.json  package.json  postcss.config.js  pyproject.toml  run-gunicorn.sh  tailwind.config.js  test_plugin_logs.sh  vite.config.js
.github/: CODEOWNERS
.github/workflows/: docker-multiplatform.yml  docker-required.yml  docker-scan.yml  linting-full.yml  notify-slack-failure.yml  playwright-smoke.yml  playwright.yml  rust.yml  s390x-wheels.yml  sql-sanitizer.yml
charts/mcp-stack/: Chart.yaml  README.md  values.yaml
crates/mcp_runtime/: Cargo.toml
docs/: CSP_INLINE_HANDLERS_MIGRATION.md  requirements.txt
docs/security/: password-policy-pentesting-response.md  uaid-cross-gateway-auth.md
docs/testing/: manual-test-uaid-cross-gateway-auth.md
infra/nginx/: Dockerfile
infra/s390x/: Containerfile
mcp-servers/python/python_sandbox_server/: pyproject.toml
mcp-servers/python/python_sandbox_server/src/python_sandbox_server/: server_fastmcp.py
mcp-servers/python/python_sandbox_server/tests/: test_sandbox_escape.py
mcp-servers/rust/fast-time-server/: Cargo.toml  Containerfile  Dockerfile  Makefile  README.md  locustfile.py
mcp-servers/rust/fast-time-server/src/: main.rs
mcpgateway/: __init__.py  __main__.py  _security_constants.py  admin.py  auth.py  auth_context.py  bootstrap_db.py  cli.py  config.py  db.py  llm_provider_configs.py  main.py  observability.py  schemas.py  sri_hashes.json  translate_header_utils.py  version.py
mcpgateway/admin_ui/: a2aAgents.js  admin.js  alpine-setup.js  auth.js  constants.js  eventDelegation.js  events.js  formHandlers.js  formSubmitHandlers.js  initialization.js  pagination.js  plugins.js  search.js  tabs.js  (+2 more)
plugins/: config.yaml
scripts/: cdn_resources.py  demo_a2a_agent_auth.py  download-cdn-assets.sh  fedramp-validate.sh  migrate_inline_handlers.py  test_email_auth_api.py  test_mcp_client.py  test_mcp_token_scoping.py  test_rest_api_endpoints.py  verify-native-extensions.py
supply-chain/: config.toml
tests/: AGENTS.md  conftest.py  test_config_security.py
(+660 files in other folders)
