[project]
name = "python-sandbox-server"
version = "2.0.0"
description = "Secure Python code execution sandbox MCP server using RestrictedPython and gVisor isolation"
authors = [
  { name = "Mihai Criveti", email = "noreply@example.com" }
]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.3.0",
    "orjson>=3.11.9",
    "pydantic>=2.13.4",
    "RestrictedPython>=8.1",
    "typing-extensions>=4.15.0",
]

[project.optional-dependencies]
http = [
    "starlette>=1.0.0",
    "uvicorn>=0.47.0",
]
dev = [
    "black>=26.3.1",
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.13",
]
sandbox = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.3",
    "requests>=2.34.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/python_sandbox_server"]

[project.scripts]
python-sandbox-server = "python_sandbox_server.server_fastmcp:main"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "W", "F", "B", "I", "N", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=python_sandbox_server --cov-report=term-missing"
