[package]
name = "fast-time-server"
version = "0.1.0"
edition = "2024"
description = "Ultra-fast MCP test server with echo and time tools"
license = "Apache-2.0"
authors = ["ContextForge Contributors"]

[workspace]

[dependencies]
# Async runtime
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "signal", "time"] }

# Web framework
axum = "0.8.9"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

# Random number generation (normal distribution for delay jitter)
rand = "0.10.1"
rand_distr = "0.6.0"

# Error handling
anyhow = "1.0.102"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

# Time handling
chrono = { version = "0.4.44", features = ["serde"] }
chrono-tz = "0.10.4"
uuid = { version = "1.18.1", features = ["v4"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
